# mist_bar

./: Cargo.toml  flake.nix
src/: main.rs
src/backend/: mod.rs
src/backend/spotify/: functions.rs
src/backend/xdg/: caching.rs  generic.rs  mod.rs
src/components/: bar.rs
src/widget_templates/: clock.rs  mod.rs  standard_box.rs
