[package]
name = "mist_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
gtk4-layer-shell = "0.5.0"
relm4 = "0.9.1"
relm4-components = "0.9.1"
relm4-macros = "0.9.1"
rspotify = { version = "0.15.0", features = ["cli", "client-ureq", "env-file", "ureq-rustls-tls"], default-features = false }
